--- a/recipes/Graphics2D/toc.yml
+++ b/recipes/Graphics2D/toc.yml
@@ -6,6 +6,8 @@
   href: Layers-Architecture.md
 - name: Add Animations
   href: Add-Animations.md
+- name: Load a Line
+  href: Load-a-Line.md
 - name: Load a Sprite Sheet
   href: Load-a-Sprite-Sheet.md
 - name: Load animated Sprite Sheet
